@@ -252,7 +252,7 @@
 	  <widget>
 	    <class>GtkFrame</class>
 	    <name>frame1</name>
-	    <label>Long Description</label>
+	    <label>Detailed Description</label>
 	    <label_xalign>0</label_xalign>
 	    <shadow_type>GTK_SHADOW_ETCHED_IN</shadow_type>
 	    <child>
