@@ -1,3 +1,13 @@
+2001-05-13  Dave Peticolas  <dave@krondo.com>
+
+	* src/gnome/new-user.glade: tweak gui
+
+	* src/gnome/window-main.c: the "destroy" handler does not
+	return a result. add menu item & functionality for account
+	hierarchy export.
+
+	* src/scm/report/welcome-to-gnucash.scm: take out the ugly :)
+
 2001-05-12  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/report/category-barchart.scm, net-barchart.scm,
